--- a/pages/my-trips.html
+++ b/pages/my-trips.html
@@ -56,7 +56,7 @@
             <label for="">Last Name</label>
             <input type="text">
 
-            <button class="button-2">CONTINUE</button>
+            <button class="button-2 mytrips">CONTINUE</button>
         </div>
         </section>
     </main>
