--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- META DESCRIPTION -->
+    <!-- 180 caracteres -->
+    <meta name="description" content="X Airline can help you find the finest travel offers. Select the best flight, add bags and seat. With the X Airline Loyalty Program, you may redeem airfare and more.">
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="x airline,vuelos,baratos,viajes,flights,cheaper,trips,airlines,domestic,interational,spirit,latam,united airlines,frontier,loyalty,american airlines,america,avianca">
+    <meta property="og:type" content="web site">  
+    <meta property="og:title" content="X Airline | You will have the best experience with X Airline!">
+    <meta property="og:description" content="X Airline can help you find the finest travel offers. Select the best flight, add bags and seat.">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>X Airline</title>
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/estilos.css">
+    <title>X Airline | Best fares and experiences for you.</title>
 </head>
 
 <body>
     <header>
         <!-- IMAGEN LOGO -->
-        <nav>
 
             <nav class="navbar navbar-expand-xl">
                 <div class="container-fluid">
@@ -55,7 +67,7 @@
     <main>
 
         <section class="book">
-            <h2>¡Book your next trip!</h2>
+            <h1>¡Book your next trip!</h1>
             <div class="type-number">
                 <select name="type-of-booking">
                     <option>Round Trip</option>
@@ -124,7 +136,7 @@
             <div>
                 <a href="" class="button-2">SEARCH FLIGHTS</a>
             </div>
-            <img src="" alt="">
+            <div class="border-line"><div ></div></div>
             </div>
             <section class="optional-services">
                 <a href="">OPTIONAL SERVICES</a>
@@ -136,35 +148,32 @@
         <section class="bundles">
 
             <div class="wifi">
-                <a href=""><img src="./img/avion-bundle1.jpg" alt=""></a>
+                <a href=""><img src="./img/avion-bundle1.jpg" alt="wifi service"></a>
                 <h3>Wifi</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eos itaque aliquid consequuntur ab
-                    laudantium fugiat nihil ex reiciendis exercitationem excepturi blanditiis, fugit tempore quod non
-                    recusandae veritatis? Placeat, repudiandae.</p>
+                <p>Learn more about our affordable plans and get connected everywhere we fly. 
+                X Airline´s Wi-Fi is the fastest.</p>
+                <p>Click the above image to learn more!</p>
             </div>
 
             <div class="discounts">
-                <a href=""><img src="./img/discounts-bundle.jpg" alt=""></a>
+                <a href=""><img src="./img/discounts-bundle.jpg" alt="our discounts"></a>
                 <h3>Discounts</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eos itaque aliquid consequuntur ab
-                    laudantium fugiat nihil ex reiciendis exercitationem excepturi blanditiis, fugit tempore quod non
-                    recusandae veritatis? Placeat, repudiandae.</p>
+                <p>Better prices? No worries! Here in X Airline you will have discounts of bags, seats and more!</p>
+                <p>Click the above image to learn more!</p>
             </div>
 
             <div class="requirements">
-                <a href=""><img src="./img/bundle-requirements.jpg" alt=""></a>
+                <a href=""><img src="./img/bundle-requirements.jpg" alt="travel requirements"></a>
                 <h3>Travel Requirements</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eos itaque aliquid consequuntur ab
-                    laudantium fugiat nihil ex reiciendis exercitationem excepturi blanditiis, fugit tempore quod non
-                    recusandae veritatis? Placeat, repudiandae.</p>
+                <p>Are you worried for the documentation needed to travel? Here you have all the information you need before preparing your trip!</p>
+                <p>Click the image to learn more!</p>
             </div>
 
             <div class="requirements">
-                <a href=""><img src="./img/bundle-2.jpg" alt=""></a>
+                <a href=""><img src="./img/bundle-2.jpg" alt="our loyalty program"></a>
                 <h3>Loyalty Program</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eos itaque aliquid consequuntur ab
-                    laudantium fugiat nihil ex reiciendis exercitationem excepturi blanditiis, fugit tempore quod non
-                    recusandae veritatis? Placeat, repudiandae.</p>
+                <p>X Airline rewards members for every dollar spent, rather than how far you fly. This means you’ll earn points for every purchase with us and with select partners.</p>
+                <p>Click the image to learn more!</p>
             </div>
 
         </section>
@@ -172,10 +181,9 @@
             <section class="bags-1">
                 <div>
                     <h2>Our Baggages Policies</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, aut doloribus accusamus culpa
-                        eveniet labore vel fuga voluptate! Dolorum deserunt quas magnam ipsum cumque reiciendis,
-                        veritatis ipsam enim earum omnis?
+                    <p>We charge for carry-ons and checked luggage in order to maintain affordable ticket costs for everyone. For checked luggage weighing over 40 pounds, we charge extra. This is because the extra weight makes the plane burn through more gas. Your ticket includes one personal item that completely fits in the smaller sizer box (such as a purse, small backpack, etc.). Any additional personal items or larger items, such as a typical carry-on or checked bag, will require payment.
                     </p>
+                    <p>Learn more in Travel Requirements!</p>
                 </div>
             </section>
         </section>
@@ -183,13 +191,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner imgs">
                 <div class="carousel-item active">
-                    <img src="./img/carousel-1.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carousel-1.jpg" class="d-block w-100" alt="viajes">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carousel-2.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carousel-2.jpg" class="d-block w-100" alt="oportunidades">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carousel-3.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carousel-3.jpg" class="d-block w-100" alt="aventuras">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
