--- a/pages/my-trips.html
+++ b/pages/my-trips.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="x airline,vuelos,baratos,viajes,flights,cheaper,trips,airlines,domestic,interational,spirit,latam,united airlines,frontier,loyalty,american airlines,america,avianca">
+    <meta property="og:type" content="web site">  
+    <meta property="og:title" content="X Airline | You will have the best experience with X Airline!">
+    <meta property="og:description" content="X Airline can help you find the finest travel offers. Select the best flight, add bags and seat.">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>My Trips</title>
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <title>My Trips | Manage travel - Find your trip!</title>
 </head>
 <body>
     <header>
@@ -45,7 +53,7 @@
                 </div>
             </nav>
     </header>
-    <main>
+    <main class="my-trips-main">
         <section class="my-trips">
         <div>
             <h2>Manage My Booking</h2>
