--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Here you will be able to have all our contact means, we will solve you inquiries and concerns.">
     <meta name="keywords" content="x airline,vuelos,baratos,viajes,flights,cheaper,trips,airlines,domestic,interational,spirit,latam,united airlines,frontier,loyalty,american airlines,america,avianca">
     <meta property="og:type" content="web site">  
     <meta property="og:title" content="X Airline | You will have the best experience with X Airline!">
-    <meta property="og:description" content="X Airline can help you find the finest travel offers. Select the best flight, add bags and seat.">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -52,7 +52,7 @@
     </header>
     <main>
         <section class="contact-us">
-                <h2>Contact Us</h2>
+                <h1>Contact Us</h1>
                 <p>We are here to help if you have any existing inquiry!</p>
                 <a href=""><i class="bi bi-wechat"></i></a>
                 <a href="" class="button-2">Let´s chat!</a>
