--- a/pages/flight-status.html
+++ b/pages/flight-status.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Check your flight status in real time, be prepare for any update of your flight and know more details of gate and terminal.">
     <meta name="keywords" content="x airline,vuelos,baratos,viajes,flights,cheaper,trips,airlines,domestic,interational,spirit,latam,united airlines,frontier,loyalty,american airlines,america,avianca">
     <meta property="og:type" content="web site">  
     <meta property="og:title" content="X Airline | You will have the best experience with X Airline!">
-    <meta property="og:description" content="X Airline can help you find the finest travel offers. Select the best flight, add bags and seat.">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Flight Status | Check your departure time in real time.</title>
+    <title>Flight Status | Check your flight status in real time.</title>
 </head>
 <body>
     <header>
@@ -56,7 +56,7 @@
     <main class="main-status">
         <section class="flight-status">
 
-                <h2>Flight Status</h2>
+                <h1>Flight Status</h1>
                 <div>
                     <label for="">Flight Number</label>
                     <input type="text" placeholder="Flight Number">
