--- a/pages/help-center.html
+++ b/pages/help-center.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Here you can solve most common doubts - prepare for your trip and know more details of our policies!.">
     <meta name="keywords" content="x airline,vuelos,baratos,viajes,flights,cheaper,trips,airlines,domestic,interational,spirit,latam,united airlines,frontier,loyalty,american airlines,america,avianca">
     <meta property="og:type" content="web site">  
     <meta property="og:title" content="X Airline | You will have the best experience with X Airline!">
@@ -16,7 +17,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Help Center | Solve all your concerns and prepare your trip.</title>
+    <title>Help Center | Solve most common doubts.</title>
 </head>
 <body>
     <header>
@@ -57,7 +58,7 @@
     </header>
     <main class="help-center">
         <section >
-            <h2>X Airline Support</h2>
+            <h1>X Airline Support</h1>
             <div class="search-bar">
                 <input type="text" placeholder="Search">
                 <a href="" class="button-2">SEARCH</a>
